--- a/Pages/capacitaciones.html
+++ b/Pages/capacitaciones.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Capacitaciones-Polonia Tech</title>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -91,7 +91,7 @@
 
         <section>
             <div>
-                <h2 class="tituloEspecial">Cursos disponibles</h2>
+                <h2>Cursos disponibles</h2>
                 <ul>
                     <li><a href="https://www.youtube.com/watch?v=FXCJlsaEvag&list=PLHk1hZEmw3_zoECydBWLNp8ha0kAEJyKH"
                             target="_blank" rel="noopener noreferrer">REPARACION DE IPHONE</a>
