--- a/Pages/productos.html
+++ b/Pages/productos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos-Polonia tech</title>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="../CSS/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -110,8 +110,8 @@
                 <h2 class="tituloTienda">Equipos Apple</h2>
             </div>
             <div id="tiendaContainer">
-                <div class="tarjetaProductos prod1"><img class="tarjetaImg" src="../assets/img/iph11VENTA.jpg"
-                        alt="iphone 11">
+                <div class="tarjetaProductos prod1">
+                    <img class="tarjetaImg" src="../assets/img/iph11VENTA.jpg" alt="iphone 11">
                     <h4>IPHONE 11</h4>
                     <p>de 128gb Black (Ultimas unidades)</p>
                     <img class="carrito" src="../assets/img/carrito.jpg" alt="carrito">
