--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PoloniaTech</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -87,7 +87,7 @@
             <h2 class="subtituloOferta">OFERTAS EXCLUSIVAS DEL MES</h2>
             <div class="containerOferta">
                 <div>
-                    <img class="imgOferta1" src="assets/img/iph14nrw.jpeg" alt="">
+                    <img src="assets/img/iph14nrw.jpeg" alt="iphone 14">
                 </div>
                 <div class="letraOferta">
                     <h4>IPHONE 14</h4>
@@ -97,12 +97,12 @@
                         deportivos, llamadas y mucho más, sin interrumpir lo que estás haciendo. Con especificaciones
                         oficiales en la mano, de los iPhone 14, 14 Plus, 14 Pro y 14 Pro Max. Cuatro nuevos dispositivos
                         de la gama más alta.</P>
-                    <a class="linkEquipo" href="Pages/productos.html">LO QUIERO</a>
+                    <a href="Pages/productos.html">LO QUIERO</a>
                 </div>
             </div>
             <div class="containerOferta">
                 <div>
-                    <img src="assets/img/iphone15nr.jpg" alt="">
+                    <img src="assets/img/iphone15nr.jpg" alt="iphone 15">
                 </div>
                 <div class="letraOferta">
                     <h4>IPHONE 15</h4>
@@ -115,7 +115,7 @@
                         todo el material. Y gracias a que el vidrio pasa por un proceso de intercambio iónico dual
                         personalizado y a la carcasa de aluminio de calidad aeroespacial, el iPhone 15 tiene una
                         resistencia increíble.</P>
-                    <a class="linkEquipo" href="Pages/productos.html">LO QUIERO</a>
+                    <a href="Pages/productos.html">LO QUIERO</a>
                 </div>
             </div>
         </section>
