AGREGAMOS GRADIENTES, SACAMOS CONTENIDO DE RELLENO Y MEJORAS EN HTML

--- a/Pages/capacitaciones.html
+++ b/Pages/capacitaciones.html
@@ -92,7 +92,7 @@
         <section>
             <div>
                 <h2>Cursos disponibles</h2>
-                <ul>
+                <ul class="flex-y-gardiente">
                     <li><a href="https://www.youtube.com/watch?v=FXCJlsaEvag&list=PLHk1hZEmw3_zoECydBWLNp8ha0kAEJyKH"
                             target="_blank" rel="noopener noreferrer">REPARACION DE IPHONE</a>
                     </li>
