--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -48,13 +48,13 @@
     <main>
         <section>
             <div>
-                <h2>CONTACTATE CON NOSOTROS</h2>
+                <h2 class="linear-cont-top">CONTACTATE CON NOSOTROS</h2>
                 <img src="../assets/img/getSupport.png" class="img-fluid" alt="soporte">
             </div>
         </section>
 
         <section>
-            <div>
+            <div class="linear-cont-bottom">
                 <h2>¡DEJANOS TUS DATOS Y UN ASESOR DE COMUNICA CON VOS!</h2>
                 <h4 class="textoContacto">Polonia Apple Tech es el Apple Premium Reseller mas innovador del pais.
                     Contamos con Asesores de alto rendimiento para hacer de esta experiencia, UNICA. Trabajamos con
@@ -62,16 +62,53 @@
                     importante... </h4>
             </div>
 
-            <form class="formUbi form-floating">
-                <input type="email" class="form-control is-invalid" id="floatingInputInvalid"
-                    placeholder="name@example.com" value="test@example.com">
-                <label for="floatingInputInvalid">Invalid input</label>
+            <form class="form-size row g-3">
+                <div class="col-md-4">
+                    <label for="validationDefault01" class="form-label">Nombre</label>
+                    <input type="text" class="form-control" id="validationDefault01" value="Steve" required>
+                </div>
+                <div class="col-md-4">
+                    <label for="validationDefault02" class="form-label">Apellido</label>
+                    <input type="text" class="form-control" id="validationDefault02" value="Jobs" required>
+                </div>
+                <div class="col-md-4">
+                    <label for="validationDefaultUsername" class="form-label">Usuario</label>
+                    <div class="input-group">
+                        <span class="input-group-text" id="inputGroupPrepend2">@</span>
+                        <input type="text" class="form-control" id="validationDefaultUsername"
+                            aria-describedby="inputGroupPrepend2" required>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <label for="validationDefault03" class="form-label">Ciudad</label>
+                    <input type="text" class="form-control" id="validationDefault03" required>
+                </div>
+                <div class="col-md-3">
+                    <label for="validationDefault04" class="form-label">Partido</label>
+                    <select class="form-select" id="validationDefault04" required>
+                        <option selected disabled value="">Seleccionar</option>
+                        <option>Lomas de Zamora</option>
+                        <option>Lanus</option>
+                        <option>Banfield</option>
+                        <option>Remedios De Escalada</option>
+                    </select>
+                </div>
+                <div class="col-md-3">
+                    <label for="validationDefault05" class="form-label">Telefono</label>
+                    <input type="text" class="form-control" id="validationDefault05" required>
+                </div>
+                <div class="col-12">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                        <label class="form-check-label" for="invalidCheck2">
+                            Estoy de acuerdo con los terminos y condiciones
+                        </label>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <button class="btn btn-primary" type="submit">Enviar</button>
+                </div>
             </form>
-            <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-                    style="height: 100px"></textarea>
-                <label for="floatingTextarea2">Comments</label>
-            </div>
 
         </section>
 
