--- a/Pages/productos.html
+++ b/Pages/productos.html
@@ -56,7 +56,7 @@
         </div>
 
         <section>
-            <div>
+            <div class="linear">
                 <h2 class="letraGigante">$ALE COMO PAN CALIENTE</h2>
             </div>
         </section>
