--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -114,24 +114,29 @@
 
         <section class="tarjetaAsesorPadre">
             <div class="tarjetaAsesor">
-                <img class="imgAsesor" src="../assets/img/asesor.jpg" alt="asesor 1">
+                <img class="imgAsesor" src="../assets/img/asesor1.png" alt="asesor">
                 <p>ASESOR 1</p>
+                <p>+54 911 ********</p>
             </div>
             <div class="tarjetaAsesor">
-                <img class="imgAsesor" src="../assets/img/asesor.jpg" alt="asesor 1">
+                <img class="imgAsesor" src="../assets/img/asesor3.png" alt="asesor">
                 <p>ASESOR 2</p>
+                <p>+54 911 ********</p>
             </div>
             <div class="tarjetaAsesor">
-                <img class="imgAsesor" src="../assets/img/asesor.jpg" alt="asesor 1">
+                <img class="imgAsesor" src="../assets/img/asesor4.png" alt="asesor">
                 <p>ASESOR 3</p>
+                <p>+54 911 ********</p>
             </div>
             <div class="tarjetaAsesor">
-                <img class="imgAsesor" src="../assets/img/asesor.jpg" alt="asesor 1">
+                <img class="imgAsesor" src="../assets/img/asesor2.png" alt="asesor">
                 <p>ASESOR 4</p>
+                <p>+54 911 ********</p>
             </div>
             <div class="tarjetaAsesor">
-                <img class="imgAsesor" src="../assets/img/asesor.jpg" alt="asesor 1">
+                <img class="imgAsesor" src="../assets/img/asesor5.png" alt="asesor">
                 <p>ASESOR 5</p>
+                <p>+54 911 ********</p>
             </div>
         </section>
 
