--- a/Pages/productos.html
+++ b/Pages/productos.html
@@ -76,7 +76,7 @@
                         Pantalla siempre activa</p>
                     <p class="textoTachado">U$D 990</p>
                     <p>U$D 920</p>
-                    <img class="carritoPan" src="../assets/img/carrito.jpg" alt="carrito">
+                    <img class="carritoPan" src="../assets/img/carrito.png" alt="carrito">
                 </div>
             </div>
             <div class="tarjetaPan">
@@ -93,7 +93,7 @@
                         Modo Retrato con Control de Profundidad y Enfoque</p>
                     <p class="textoTachado">U$D 890</p>
                     <p>U$D 810</p>
-                    <img class="carritoPan" src="../assets/img/carrito.jpg" alt="carrito">
+                    <img class="carritoPan" src="../assets/img/carrito.png" alt="carrito">
                 </div>
         </section>
 
@@ -110,76 +110,76 @@
                 <h2 class="tituloTienda">Equipos Apple</h2>
             </div>
             <div id="tiendaContainer">
-                <div class="tarjetaProductos prod1">
+                <div class="tarjetaProductos">
                     <img class="tarjetaImg" src="../assets/img/iph11VENTA.jpg" alt="iphone 11">
                     <h4>IPHONE 11</h4>
                     <p>de 128gb Black (Ultimas unidades)</p>
-                    <img class="carrito" src="../assets/img/carrito.jpg" alt="carrito">
+                    <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
                     <h5 class="precioTarjeta">U$D 560</h5>
                 </div>
-                <div class="tarjetaProductos prod2"><img class="tarjetaImg" src="../assets/img/iph11VENTA.jpg"
+                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/IPHONE13.png"
                         alt="iphone 13">
                     <h4>IPHONE 13</h4>
                     <p>de 128gb Green/Rose/Midnight/Starlight</p>
-                    <img class="carrito" src="../assets/img/carrito.jpg" alt="carrito">
+                    <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
                     <h5 class="precioTarjeta">U$D 710</h5>
                 </div>
-                <div class="tarjetaProductos prod3"><img class="tarjetaImg" src="../assets/img/iph15proVENTA.jpg"
+                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/iph15proVENTA.png"
                         alt="iphone 15 Pro">
                     <h4>IPHONE 15 PRO </h4>
                     <p>de 128gb - Titanium Gama Colors</p>
-                    <img class="carrito" src="../assets/img/carrito.jpg" alt="carrito">
+                    <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
                     <h5 class="precioTarjeta">U$D 1.170</h5>
                 </div>
-                <div class="tarjetaProductos prod4"><img class="tarjetaImg" src="../assets/img/iph15proVENTA.jpg"
+                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/iph15proVENTA.png"
                         alt="iphone 15 Pro Max">
                     <h4>IPHONE 15 PRO MAX </h4>
                     <p>de 256gb - Titanium Gama Colors</p>
-                    <img class="carrito" src="../assets/img/carrito.jpg" alt="carrito">
+                    <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
                     <h5 class="precioTarjeta">U$D 1.320</h5>
                 </div>
-                <div class="tarjetaProductos prod5"><img class="tarjetaImg" src="../assets/img/watchUltra1.jpg"
+                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/watchUltrA.png"
                         alt="Apple Watch ultra">
                     <h4>APPLE WATCH ULTRA</h4>
                     <p>disponible en BlueOcean</p>
-                    <img class="carrito" src="../assets/img/carrito.jpg" alt="carrito">
+                    <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
                     <h5 class="precioTarjeta">U$D 1410</h5>
                     <p class="newTarjeta">NEW</p>
                 </div>
-                <div class="tarjetaProductos prod6"><img class="tarjetaImg" src="../assets/img/macbook15venta.jpg"
+                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/mB15.png"
                         alt="Macbook 15">
                     <h4>MACBOOK AIR 15"</h4>
                     <p>de 512gb - Chip M2 - Midnight</p>
-                    <img class="carrito" src="../assets/img/carrito.jpg" alt="carrito">
+                    <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
                     <h5 class="precioTarjeta">U$D 2.000</h5>
                     <p class="newTarjeta">NEW</p>
                 </div>
-                <div class="tarjetaProductos prod7"><img class="tarjetaImg" src="../assets/img/AIRPODSPRO.jpg"
+                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/AIRPODSPRO.png"
                         alt="Airpods Pro 2">
                     <h4>AIRPODS PRO 2DA GEN</h4>
                     <p>Cancelacion de sonido y personalizacion</p>
-                    <img class="carrito" src="../assets/img/carrito.jpg" alt="carrito">
+                    <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
                     <h5 class="precioTarjeta">U$D 310</h5>
                 </div>
-                <div class="tarjetaProductos prod8"><img class="tarjetaImg" src="../assets/img/battery pack.png"
+                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/battery_pack.png"
                         alt="battery pack">
                     <h4>APPLE BATTERY PACK</h4>
                     <p>25.000 mHz - Portable</p>
-                    <img class="carrito" src="../assets/img/carrito.jpg" alt="carrito">
+                    <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
                     <h5 class="precioTarjeta">U$D 320</h5>
                 </div>
-                <div class="tarjetaProductos prod9"><img class="tarjetaImg" src="../assets/img/airtag.webp"
+                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/airtag.webp"
                         alt="Airtag">
                     <h4>APPLE AIRTAG PACK X4</h4>
                     <p>Pack x4 unidades Airtag Portable</p>
-                    <img class="carrito" src="../assets/img/carrito.jpg" alt="carrito">
+                    <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
                     <h5 class="precioTarjeta">U$D 140</h5>
                 </div>
-                <div class="tarjetaProductos prod10"><img class="tarjetaImg" src="../assets/img/20wapple.jpg"
+                <div class="tarjetaProductos"><img class="tarjetaImg" src="../assets/img/20wapple.png"
                         alt="Transformador 20W">
                     <h4>Transformador 20W Apple Original</h4>
                     <p>con Nmro. de serie y Testeo</p>
-                    <img class="carrito" src="../assets/img/carrito.jpg" alt="carrito">
+                    <img class="carrito" src="../assets/img/carrito.png" alt="carrito">
                     <h5 class="precioTarjeta">$83.700</h5>
                 </div>
             </div>
