--- a/Pages/productos.html
+++ b/Pages/productos.html
@@ -16,37 +16,21 @@
 
 <body>
 
-    <header class="positionSticky">
-        <div class="headerContainer">
-            <div class="boxLogo">
-                <a href="../index.html">
-                    <img class="iconSize" src="../assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
-                </a>
-            </div>
-            <div class="boxTitulo">
-                <h1>POLONIA APPLE TECH</h1>
-            </div>
-            <div class="boxNav">
-                <ul class="nav nav-tabs estiloNav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contacto.html">Contacto</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./servicioTecnico.html">Servicio Tecnico</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./capacitaciones.html">Capacitaciones</a>
-                    </li>
-                </ul>
-            </div>
+    <nav class="navigation">
+        <div class="navmark">
+            <a href="/">
+                <img class="iconSize" src="/assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
+            </a>
+            <h1>POLONIA APPLE TECH</h1>
         </div>
-    </header>
+        <div class="navlinks">
+            <a href="/">Inicio</a>
+            <a href="./contacto.html">Contacto</a>
+            <a href="./productos.html" class="active">Productos</a>
+            <a href="./servicioTecnico.html">Servicio Tecnico</a>
+            <a href="./capacitaciones.html">Capacitaciones</a>
+        </div>
+    </nav>
 
     <main>
         <div>
@@ -187,61 +171,54 @@
 
 
 
-    <footer id="footerPadre">
-        <section class="redesFooter">
-            <div>
-                <h4>REDES</h4>
-            </div>
-            <div class="logoFooter"> <a href="https://www.instagram.com/iclubapplear" target="_blank">
-                    <img class="imgFooter" src="../assets/logos/instLogo.jpg" alt="instagram logo">
-                </a>
+    <footer class="footer">
+        <section class="contacto">
+          <div>
+              <h4>REDES</h4>
+              <div class="logoFooter">
+                <a href="https://www.instagram.com/iclubapplear" target="_blank">
+                      <img class="imgFooter" src="../assets/logos/instLogo.jpg" alt="instagram logo">
+                  </a>
 
-                <a href="https://www.tiktok.com/@iclubapplear" target="_blank">
-                    <img class="imgFooter" src="../assets/logos/tiktoklogo.png" alt="tiktok logo">
-                </a>
+                  <a href="https://www.tiktok.com/@iclubapplear" target="_blank">
+                      <img class="imgFooter" src="../assets/logos/tiktoklogo.png" alt="tiktok logo">
+                  </a>
 
-                <a href="https://www.facebook.com/profile.php?id=61556069272240" target="_blank">
-                    <img class="imgFooter" src="../assets/logos/facebookLogo.jpg" alt="facebookLogo">
-                </a>
-            </div>
+                  <a href="https://www.facebook.com/profile.php?id=61556069272240" target="_blank">
+                      <img class="imgFooter" src="../assets/logos/facebookLogo.jpg" alt="facebookLogo">
+                  </a>
+              </div>
+          </div>
+          <div>
+              <h4>TELEFONOS</h4>
+              <div>
+                  <ul>
+                      <li>
+                        <a href="tel:011-1111-2222">011-1111-2222</a>
+                      </li>
+                      <li>
+                        <a href="tel:011-4255-5589">011-4255-5589</a>
+                      </li>
+                      <li>
+                        <a href="tel:011-5858-5858">011-5858-5858</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+          <div>
+              <h4>DIRECCIONES</h4>
+              <p>Calle Banana Loca, Bs.As, Argentina</p>
+          </div>
+          <div>
+              <h4>EMAILS</h4>
+              <a href="mailto:poloniatechnologies@appletech.com">poloniatechnologies@appletech.com</a>
+          </div>
         </section>
         <section class="infoFooter">
-            <div>
-                <h4>INFO EXTRA</h4>
-            </div>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur totam asperiores tenetur
-                    nesciunt, cum natus voluptatibus sequi, ipsa rerum non repudiandae accusantium cupiditate est
-                    perferendis provident rem mollitia. Ab, vitae.</p>?
-            </div>
-        </section>
-        <section class="telFooter">
-            <div>
-                <h4>TELEFONOS</h4>
-            </div>
-            <div>
-                <ol>
-                    <li>011-1111-2222</li>
-                    <li>011-4255-5589</li>
-                    <li>011-5858-5858</li>
-                </ol>
-            </div>
-        </section>
-        <section class="direcFooter">
-            <div>
-                <h4>DIRECCIONES</h4>
-            </div>
-            <div>
-                <p>Calle Banana Loca, Bs.As, Argentina</p>
-            </div>
-        </section>
-        <section class="emailFooter">
-            <div>
-                <h4>EMAILS</h4>
-            </div>
-            <div>
-                <P>poloniatechnologies@appletech.com</P>
-            </div>
+            <h4>INFO EXTRA</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur totam asperiores tenetur
+                nesciunt, cum natus voluptatibus sequi, ipsa rerum non repudiandae accusantium cupiditate est
+                perferendis provident rem mollitia. Ab, vitae.</p>
         </section>
     </footer>
 
