--- a/index.html
+++ b/index.html
@@ -2,49 +2,33 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PoloniaTech</title>
+    <meta name="description" content="Polonia Apple Tech, tu tienda de tecnologia de confianza">
+    <meta name="keywords" content="Apple, iPhone, Macbook, Apple Watch, Servicio Tecnico, Capacitaciones">
+    <link rel="icon" href="assets/logos/appleLogo-removebg-preview.png" type="image/png">
     <link rel="stylesheet" href="./css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
-
-    <header class="positionSticky">
-        <div class="headerContainer">
-            <div class="boxLogo">
-                <a href="index.html">
-                    <img class="iconSize" src="assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
-                </a>
-            </div>
-            <div class="boxTitulo">
-                <h1>POLONIA APPLE TECH</h1>
-            </div>
-            <div class="boxNav">
-                <ul class="nav nav-tabs estiloNav">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Pages/contacto.html">Contacto</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Pages/productos.html">Productos</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Pages/servicioTecnico.html">Servicio Tecnico</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="Pages/capacitaciones.html">Capacitaciones</a>
-                    </li>
-                </ul>
-            </div>
+    <nav class="navigation">
+        <div class="navmark">
+            <a href="/">
+                <img class="iconSize" src="assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
+            </a>
+            <h1>POLONIA APPLE TECH</h1>
         </div>
-    </header>
-
+        <div class="navlinks">
+            <a href="#" class="active">Inicio</a>
+            <a href="Pages/contacto.html">Contacto</a>
+            <a href="Pages/productos.html">Productos</a>
+            <a href="Pages/servicioTecnico.html">Servicio Tecnico</a>
+            <a href="Pages/capacitaciones.html">Capacitaciones</a>
+        </div>
+    </nav>
 
     <main>
         <section>
@@ -83,11 +67,12 @@
             </div>
         </section>
 
-        <section>
+        <section class="ofertas">
             <h2 class="subtituloOferta">OFERTAS EXCLUSIVAS DEL MES</h2>
             <div class="containerOferta">
-                <div>
-                    <img src="assets/img/iph14nrw.jpeg" alt="iphone 14">
+                <div class="images">
+                    <img src="assets/img/iphone-14.webp" alt="iphone 14" class="left" style="margin-top: -150px; margin-left: -100px; height: 150%;">
+                    <img src="assets/img/iphone-14.webp" alt="iphone 14" class="right" style="margin-bottom: -150px; margin-right: -100px; height: 150%;">
                 </div>
                 <div class="letraOferta">
                     <h4>IPHONE 14</h4>
@@ -101,8 +86,9 @@
                 </div>
             </div>
             <div class="containerOferta">
-                <div>
-                    <img src="assets/img/iphone15nr.jpg" alt="iphone 15">
+                <div class="images">
+                    <img src="assets/img/iphone15pan.png" alt="iphone 15" class="left" style="margin-top: -150px; margin-left: -100px; height: 150%;">
+                    <img src="assets/img/iphone15pan.png" alt="iphone 15" class="right" style="margin-bottom: -150px; margin-right: -100px; height: 150%;">
                 </div>
                 <div class="letraOferta">
                     <h4>IPHONE 15</h4>
@@ -153,86 +139,74 @@
             </div>
         </section>
 
-        <section>
-            <div class="newArrival1">
-                <h2 class="letraGigante">NEW</h2>
-                <img src="assets/img/watch_ULTRA.jpg" alt="Apple Watch Ultra">
-                <h2 class="letraGigante">ARRIVAL</h2>
-                <a class="verMas" href="Pages/productos.html">VER MAS</a>
-            </div>
-            <div class="newArrival2">
-                <h2 class="letraGigante2">MACNIFICA</h2>
-                <img src="assets/img/macbook15.png" alt="">
-                <h2 class="letraGigante2">15"</h2>
-                <a class="verMas2" href="Pages/productos.html">VER MAS</a>
-
-            </div>
-            <div class="newArrival1">
-                <img src="assets/img/COVERST.png" alt="Apple Watch Ultra">
-                <h2 class="letraGigante">SERVICE</h2>
-                <a class="verMas" href="Pages/servicioTecnico.html">VER MAS</a>
-            </div>
+        <section class="newArrival">
+            <h2 class="letraGigante">NEW</h2>
+            <img src="assets/img/watchUltrA.png" alt="Apple Watch Ultra">
+            <h2 class="letraGigante">ARRIVAL</h2>
+            <a class="verMas" href="Pages/productos.html">VER MAS</a>
         </section>
-
-
+        <section class="newArrival">
+            <h2 class="letraGigante">MACNIFICA</h2>
+            <img src="assets/img/macbook15.png" alt="">
+            <h2 class="letraGigante">15"</h2>
+            <a class="verMas" href="Pages/productos.html">VER MAS</a>
+        </section>
+        <section class="newArrival">
+            <h2 class="letraGigante">SERVICE</h2>
+            <img src="assets/img/COVERST.png" alt="Apple Watch Ultra" style="width: 50vw;">
+            <a class="verMas" href="Pages/servicioTecnico.html">VER MAS</a>
+        </section>
     </main>
 
 
-    <footer id="footerPadre">
-        <section class="redesFooter">
-            <div>
-                <h4>REDES</h4>
-            </div>
-            <div class="logoFooter"> <a href="https://www.instagram.com/iclubapplear" target="_blank">
-                    <img class="imgFooter" src="assets/logos/instLogo.jpg" alt="instagram logo">
-                </a>
+    <footer class="footer">
+        <section class="contacto">
+          <div>
+              <h4>REDES</h4>
+              <div class="logoFooter">
+                <a href="https://www.instagram.com/iclubapplear" target="_blank">
+                      <img class="imgFooter" src="assets/logos/instLogo.jpg" alt="instagram logo">
+                  </a>
 
-                <a href="https://www.tiktok.com/@iclubapplear" target="_blank">
-                    <img class="imgFooter" src="assets/logos/tiktoklogo.png" alt="tiktok logo">
-                </a>
+                  <a href="https://www.tiktok.com/@iclubapplear" target="_blank">
+                      <img class="imgFooter" src="assets/logos/tiktoklogo.png" alt="tiktok logo">
+                  </a>
 
-                <a href="https://www.facebook.com/profile.php?id=61556069272240" target="_blank">
-                    <img class="imgFooter" src="assets/logos/facebookLogo.jpg" alt="facebookLogo">
-                </a>
-            </div>
+                  <a href="https://www.facebook.com/profile.php?id=61556069272240" target="_blank">
+                      <img class="imgFooter" src="assets/logos/facebookLogo.jpg" alt="facebookLogo">
+                  </a>
+              </div>
+          </div>
+          <div>
+              <h4>TELEFONOS</h4>
+              <div>
+                  <ul>
+                      <li>
+                        <a href="tel:011-1111-2222">011-1111-2222</a>
+                      </li>
+                      <li>
+                        <a href="tel:011-4255-5589">011-4255-5589</a>
+                      </li>
+                      <li>
+                        <a href="tel:011-5858-5858">011-5858-5858</a>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+          <div>
+              <h4>DIRECCIONES</h4>
+              <p>Calle Banana Loca, Bs.As, Argentina</p>
+          </div>
+          <div>
+              <h4>EMAILS</h4>
+              <a href="mailto:poloniatechnologies@appletech.com">poloniatechnologies@appletech.com</a>
+          </div>
         </section>
         <section class="infoFooter">
-            <div>
-                <h4>INFO EXTRA</h4>
-            </div>
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur totam asperiores tenetur
-                    nesciunt, cum natus voluptatibus sequi, ipsa rerum non repudiandae accusantium cupiditate est
-                    perferendis provident rem mollitia. Ab, vitae.</p>
-            </div>
-        </section>
-        <section class="telFooter">
-            <div>
-                <h4>TELEFONOS</h4>
-            </div>
-            <div>
-                <ol>
-                    <li>011-1111-2222</li>
-                    <li>011-4255-5589</li>
-                    <li>011-5858-5858</li>
-                </ol>
-            </div>
-        </section>
-        <section class="direcFooter">
-            <div>
-                <h4>DIRECCIONES</h4>
-            </div>
-            <div>
-                <p>Calle Banana Loca, Bs.As, Argentina</p>
-            </div>
-        </section>
-        <section class="emailFooter">
-            <div>
-                <h4>EMAILS</h4>
-            </div>
-            <div>
-                <P>poloniatechnologies@appletech.com</P>
-            </div>
+            <h4>INFO EXTRA</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur totam asperiores tenetur
+                nesciunt, cum natus voluptatibus sequi, ipsa rerum non repudiandae accusantium cupiditate est
+                perferendis provident rem mollitia. Ab, vitae.</p>
         </section>
     </footer>
 
