--- a/Pages/capacitaciones.html
+++ b/Pages/capacitaciones.html
@@ -21,16 +21,16 @@
     <nav class="navigation">
         <div class="navmark">
             <a href="/">
-                <img class="iconSize" src="/assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
+                <img class="iconSize" src="../assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
             </a>
             <h1>POLONIA APPLE TECH</h1>
         </div>
         <div class="navlinks">
-            <a href="/">Inicio</a>
+            <a href="../index.html">Inicio</a>
             <a href="./contacto.html">Contacto</a>
             <a href="./productos.html">Productos</a>
             <a href="./servicioTecnico.html">Servicio Tecnico</a>
-            <a href="./capacitaciones.html" class="active">Capacitaciones</a>
+            <a href="#" class="active">Capacitaciones</a>
         </div>
     </nav>
 
@@ -57,19 +57,19 @@
 
         <section id="cuadroCursos">
             <div class="box box1">
-                <img class="imgCuadroCap" src="../assets/img/imgRepaCuadro1.jpg" alt="">
+                <img class="imgCuadroCap" src="../assets/img/imgRepaCuadro1.jpg" alt="imagen del cuadro">
             </div>
             <div class="box box2">
-                <img class="imgCuadroCap" src="../assets/img/imgRepaCuadro4.jpg" alt="">
+                <img class="imgCuadroCap" src="../assets/img/imgRepaCuadro4.jpg" alt="imagen del cuadro">
             </div>
             <div class="box box3">
-                <img class="imgCuadroCap" src="../assets/img/imgRepaCuadro2.jpg" alt="">
+                <img class="imgCuadroCap" src="../assets/img/imgRepaCuadro2.jpg" alt="imagen del cuadro">
             </div>
             <div class="box box4">
-                <img class="imgCuadroCap" src="../assets/img/imgRepaCuadro3.jpg" alt="">
+                <img class="imgCuadroCap" src="../assets/img/imgRepaCuadro3.jpg" alt="imagen del cuadro">
             </div>
             <div class="box box5">
-                <img class="imgCuadroCap" src="../assets/img/imgRepaCuadro5.jpg" alt="">
+                <img class="imgCuadroCap" src="../assets/img/imgRepaCuadro5.jpg" alt="imagen del cuadro">
             </div>
         </section>
 
