--- a/Pages/productos.html
+++ b/Pages/productos.html
@@ -19,14 +19,14 @@
     <nav class="navigation">
         <div class="navmark">
             <a href="/">
-                <img class="iconSize" src="/assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
+                <img class="iconSize" src="../assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
             </a>
             <h1>POLONIA APPLE TECH</h1>
         </div>
         <div class="navlinks">
-            <a href="/">Inicio</a>
+            <a href="../index.html">Inicio</a>
             <a href="./contacto.html">Contacto</a>
-            <a href="./productos.html" class="active">Productos</a>
+            <a href="#" class="active">Productos</a>
             <a href="./servicioTecnico.html">Servicio Tecnico</a>
             <a href="./capacitaciones.html">Capacitaciones</a>
         </div>
@@ -36,7 +36,7 @@
         <div>
             <h2 class="tituloTienda">La Tienda.</h2>
             <h3 class="tituloTienda2">Lo que mas buscas a un click de ser tuyo...</h3>
-            <img src="../assets/img/bannerProductos.png" class="img-fluid" alt="...">
+            <img src="../assets/img/bannerProductos.png" class="img-fluid" alt="banner">
         </div>
 
         <section>
