--- a/Pages/servicioTecnico.html
+++ b/Pages/servicioTecnico.html
@@ -16,15 +16,15 @@
     <nav class="navigation">
         <div class="navmark">
             <a href="/">
-                <img class="iconSize" src="/assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
+                <img class="iconSize" src="../assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
             </a>
             <h1>POLONIA APPLE TECH</h1>
         </div>
         <div class="navlinks">
-            <a href="/">Inicio</a>
+            <a href="../index.html">Inicio</a>
             <a href="./contacto.html">Contacto</a>
             <a href="./productos.html">Productos</a>
-            <a href="./servicioTecnico.html" class="active">Servicio Tecnico</a>
+            <a href="#" class="active">Servicio Tecnico</a>
             <a href="./capacitaciones.html">Capacitaciones</a>
         </div>
     </nav>
