--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto-PoloniaTech</title>
+    <title>Contacto | PoloniaTech</title>
+    <meta name="description" content="Polonia Apple Tech, ¡contactate con nosotros y forma parte de nuestra familia!">
+    <meta name="keywords" content="Apple, iPhone, contacto, centro de atencion, plan canje, Lomas de Zamora">
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
