--- a/Pages/servicioTecnico.html
+++ b/Pages/servicioTecnico.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Servicio Tecnico-PoloniaTech</title>
+    <title>Servicio Tecnico | PoloniaTech</title>
+    <meta name="description"
+        content="Polonia Apple Tech, reapraciones en el dia y con los mejores repuestos y garantia oficial!">
+    <meta name="keywords" content="Apple, iPhone, Macbook, reparaciones, Servicio Tecnico">
     <link rel="stylesheet" href="../css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -12,10 +15,10 @@
 
 <body>
 
-    
+
     <nav class="navigation">
         <div class="navmark">
-            <a href="/">
+            <a href="../index.html">
                 <img class="iconSize" src="../assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
             </a>
             <h1>POLONIA APPLE TECH</h1>
@@ -39,92 +42,73 @@
 
         <section>
             <div>
-                <h2 class="letraGigante2">SOPORTE PERSONALIZADO</h2>
+                <h2 class="letraGigante">SOPORTE PERSONALIZADO</h2>
             </div>
-
+            <div class="parrafoSer1">
+                <img class="img-fondo-st" src="../assets/img/service-backg.png" alt="fondo service">
+                <p>En Polonia Apple Tech te ayudamos a resolver cualquier inconveniente de una manera ágil y cómoda,
+                    a través de la atención personalizada de nuestros técnicos certificados por Apple. Te ofrecemos
+                    un servicio integral que incluye reparaciones de equipos Apple en garantía o fuera de ella, con
+                    repuestos oficiales y un servicio de expertos formados y certificados por Apple. Cambio de
+                    baterías y pantallas de iPhone en el día (consulta stock) todo con garantía internacional Apple.
+                    Migraciones de plataformas (de PC a MAC) adaptados a tus necesidades y requerimientos.</p>
+            </div>
             <section>
-                <div class="parrafoSer1">
-                    <p>En Polonia Apple Tech te ayudamos a resolver cualquier inconveniente de una manera ágil y cómoda,
-                        a través de la atención personalizada de nuestros técnicos certificados por Apple. Te ofrecemos
-                        un servicio integral que incluye reparaciones de equipos Apple en garantía o fuera de ella, con
-                        repuestos oficiales y un servicio de expertos formados y certificados por Apple. Cambio de
-                        baterías y pantallas de iPhone en el día (consulta stock) todo con garantía internacional Apple.
-                        Migraciones de plataformas (de PC a MAC) adaptados a tus necesidades y requerimientos.</p>
-                </div>
-                <div class="imgSerCentro"><img src="../assets/img/celuRoto.png" class="imgService img-fluid" alt="celular roto">
-                    <img src="../assets/img/matiRepa.jpg" class="imgService img-fluid" alt="tecnico">
-                </div>
-                <div class="parrafoSer2">
-                    <p>Profesional especializado en la reparación de dispositivos móviles, como teléfonos celulares,
-                        tablets y otros dispositivos electrónicos portátiles. Este tipo de técnico debe tener
-                        conocimientos en electrónica, software y hardware, así como habilidades para diagnosticar y
-                        solucionar problemas en los dispositivos.
-                        Algunas de las tareas que realiza un técnico en arreglo de celulares incluyen la reparación de
-                        pantallas rotas, la sustitución de baterías, la reparación de puertos de carga, la solución de
-                        problemas de software, entre otros.</p>
-                </div>
+
+                <h2 class="letraGigante2">ENTREMOS EN ACCION</h2>
+                <iframe class="videoST" width="560" height="315"
+                    src="https://www.youtube.com/embed/_i916QZ7oA4?si=hQ44g6a0THqDssvL" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
             </section>
-
-
-        </section>
-
-
-        <section>
-
-            <h2 class="letraGigante2">ENTREMOS EN ACCION</h2>
-            <iframe class="videoST" width="560" height="315"
-                src="https://www.youtube.com/embed/_i916QZ7oA4?si=hQ44g6a0THqDssvL" title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-        </section>
 
     </main>
 
 
     <footer class="footer">
         <section class="contacto">
-          <div>
-              <h4>REDES</h4>
-              <div class="logoFooter">
-                <a href="https://www.instagram.com/iclubapplear" target="_blank">
-                      <img class="imgFooter" src="../assets/logos/instLogo.jpg" alt="instagram logo">
-                  </a>
+            <div>
+                <h4>REDES</h4>
+                <div class="logoFooter">
+                    <a href="https://www.instagram.com/iclubapplear" target="_blank">
+                        <img class="imgFooter" src="../assets/logos/instLogo.jpg" alt="instagram logo">
+                    </a>
 
-                  <a href="https://www.tiktok.com/@iclubapplear" target="_blank">
-                      <img class="imgFooter" src="../assets/logos/tiktoklogo.png" alt="tiktok logo">
-                  </a>
+                    <a href="https://www.tiktok.com/@iclubapplear" target="_blank">
+                        <img class="imgFooter" src="../assets/logos/tiktoklogo.png" alt="tiktok logo">
+                    </a>
 
-                  <a href="https://www.facebook.com/profile.php?id=61556069272240" target="_blank">
-                      <img class="imgFooter" src="../assets/logos/facebookLogo.jpg" alt="facebookLogo">
-                  </a>
-              </div>
-          </div>
-          <div>
-              <h4>TELEFONOS</h4>
-              <div>
-                  <ul>
-                      <li>
-                        <a href="tel:011-1111-2222">011-1111-2222</a>
-                      </li>
-                      <li>
-                        <a href="tel:011-4255-5589">011-4255-5589</a>
-                      </li>
-                      <li>
-                        <a href="tel:011-5858-5858">011-5858-5858</a>
-                      </li>
-                  </ul>
-              </div>
-          </div>
-          <div>
-              <h4>DIRECCIONES</h4>
-              <p>Calle Banana Loca, Bs.As, Argentina</p>
-          </div>
-          <div>
-              <h4>EMAILS</h4>
-              <a href="mailto:poloniatechnologies@appletech.com">poloniatechnologies@appletech.com</a>
-          </div>
+                    <a href="https://www.facebook.com/profile.php?id=61556069272240" target="_blank">
+                        <img class="imgFooter" src="../assets/logos/facebookLogo.jpg" alt="facebookLogo">
+                    </a>
+                </div>
+            </div>
+            <div>
+                <h4>TELEFONOS</h4>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="tel:011-1111-2222">011-1111-2222</a>
+                        </li>
+                        <li>
+                            <a href="tel:011-4255-5589">011-4255-5589</a>
+                        </li>
+                        <li>
+                            <a href="tel:011-5858-5858">011-5858-5858</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <h4>DIRECCIONES</h4>
+                <p>Calle Banana Loca, Bs.As, Argentina</p>
+            </div>
+            <div>
+                <h4>EMAILS</h4>
+                <a href="mailto:poloniatechnologies@appletech.com">poloniatechnologies@appletech.com</a>
+            </div>
         </section>
         <section class="infoFooter">
             <h4>INFO EXTRA</h4>
