--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PoloniaTech</title>
-    <meta name="description" content="Polonia Apple Tech, tu tienda de tecnologia de confianza">
-    <meta name="keywords" content="Apple, iPhone, Macbook, Apple Watch, Servicio Tecnico, Capacitaciones">
+    <title>Polonia Tech</title>
+    <meta name="description" content="Polonia Apple Tech, tu tienda de tecnologia de confianza, encontra todos los productos Apple Originales y mas!">
+    <meta name="keywords" content="Apple, iPhone, Macbook, Apple Watch, Airpods, Servicio Tecnico, Capacitaciones">
     <link rel="icon" href="assets/logos/appleLogo-removebg-preview.png" type="image/png">
     <link rel="stylesheet" href="./css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
