--- a/index.html
+++ b/index.html
@@ -11,15 +11,31 @@
     <link rel="stylesheet" href="./css/estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous"
+        referrerpolicy="no-referrer"
+    />
 </head>
 
 <body>
     <nav class="navigation">
-        <div class="navmark">
-            <a href="/">
-                <img class="iconSize" src="assets/logos/appleLogo-removebg-preview.png" alt="logo apple ">
+        <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+        <div class="bar">
+            <a class="navmark" href="/">
+                <img
+                class="iconSize"
+                src="assets/logos/appleLogo-removebg-preview.png"
+                alt="logo apple "
+                />
+                <h1>POLONIA APPLE TECH</h1>
             </a>
-            <h1>POLONIA APPLE TECH</h1>
+            <label for="nav-toggle" class="nav-toggle-label">
+                <i class="fa-solid fa-bars fa-lg"></i>
+                <i class="fa-solid fa-times fa-lg"></i>
+            </label>
         </div>
         <div class="navlinks">
             <a href="#" class="active">Inicio</a>
@@ -27,9 +43,8 @@
             <a href="Pages/productos.html">Productos</a>
             <a href="Pages/servicioTecnico.html">Servicio Tecnico</a>
             <a href="Pages/capacitaciones.html">Capacitaciones</a>
-        </div>
+        </div>    
     </nav>
-
     <main>
         <section>
             <div id="carouselExampleIndicators" class="carousel slide">
@@ -42,16 +57,29 @@
                         aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
-                    <div class="imgNormal carousel-item active">
-                        <a href="index.html#planCanjeSite"><img src="assets/img/carousel1.png" class="d-block w-100"
-                                alt="Plan Canje"></a>
+                    <div class="carousel-item active">
+                        <a href="index.html#planCanjeSite" class="d-flex justify-content-center align-items-center w-100">
+                            <picture>
+                                <source srcset="assets/img/carousel1.responsive.webp" type="image/webp" media="(max-width: 768px)">
+                                <img src="assets/img/carousel1.webp" class="img-fluid" alt="Plan canje">
+                            </picture>
+                        </a>
                     </div>
-                    <div class="imgNormal carousel-item">
-                        <img src="assets/img/carousel2.png" class="d-block w-100" alt="Vision Pro">
+                    <div class="carousel-item">
+                        <div class="d-flex justify-content-center align-items-center w-100">
+                            <picture>
+                                <source srcset="assets/img/carousel2.responsive.webp" type="image/webp" media="(max-width: 768px)">
+                                <img src="assets/img/carousel2.webp" class="img-fluid" alt="Vision pro">
+                            </picture>
+                        </div>
                     </div>
-                    <div class="imgNormal carousel-item">
-                        <a href="Pages/servicioTecnico.html"><img src="assets/img/carousel3.png" class="d-block w-100"
-                                alt="Servicio Tecnico"></a>
+                    <div class="carousel-item">
+                        <a href="Pages/servicioTecnico.html"  class="d-flex justify-content-center align-items-center w-100">
+                            <picture>
+                                <source srcset="assets/img/carousel3.responsive.webp" type="image/webp" media="(max-width: 768px)">
+                                <img src="assets/img/carousel3.webp" class="img-fluid" alt="Servicio Tecnico">
+                            </picture>
+                        </a>
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
